--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -10,7 +10,7 @@
 	    android:layout_height="wrap_content"
 	    android:textAppearance="@android:style/TextAppearance.Medium"
 	    android:gravity="center_vertical"
-	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawableLeft="@drawable/ic_navigation_drawer"
 	    android:drawablePadding="3dp"
 	    android:textColor="@color/navigation_drawer_text">
 	</TextView>
