--- a/res/layout/fragment_my_account.xml
+++ b/res/layout/fragment_my_account.xml
@@ -10,17 +10,36 @@
     tools:context=".FilePropertiesFragment" 
     android:orientation="vertical">
     
-    <nz.mega.components.RoundedImageView
-        android:id="@+id/my_avatar_image"
+    <RelativeLayout 
+        android:id="@+id/my_account_avatar_layout"
         android:layout_width="100dp"
-         android:layout_height="100dp"
-       	android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:layout_weight="1"
-        rounded:border_color="@color/border_file_properties"
-        rounded:border_width="2dp"
-        rounded:corner_radius="100dp" />
+        android:layout_weight="1">
+    
+	    <nz.mega.components.RoundedImageView
+	        android:id="@+id/my_avatar_image"
+	        android:layout_width="100dp"
+	         android:layout_height="100dp"
+	       	android:layout_gravity="center_horizontal|center_vertical"
+	        android:paddingBottom="10dp"
+	        android:paddingTop="10dp"
+	        rounded:border_color="@color/border_file_properties"
+	        rounded:border_width="2dp"
+	        rounded:corner_radius="100dp" />
+	    
+	    <TextView
+            android:id="@+id/my_account_initial_letter"
+            android:layout_width="fill_parent"
+   			android:layout_height="fill_parent"
+   			android:layout_centerInParent="true"
+			android:gravity="center_horizontal|center_vertical"
+   			android:paddingBottom="5dp"
+   			android:text="L"  />
+	    
+    </RelativeLayout>
 
       <TextView
            android:id="@+id/my_name"
