--- a/res/layout/fragment_rubbishbinlist.xml
+++ b/res/layout/fragment_rubbishbinlist.xml
@@ -4,11 +4,21 @@
     android:layout_height="match_parent"
     tools:context=".RubbishBinListFragment" >
 
+    <TextView
+	    android:id="@+id/rubbishbin_list_content_text"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:paddingLeft="8dp"
+	    android:textColor="@color/button_text"
+	    android:background="@color/dark_grey_cloud_drive"
+	    android:textSize="16sp"/>
+    
     <ListView
         android:id="@+id/rubbishbin_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="multipleChoice" >
+        android:choiceMode="multipleChoice"
+        android:layout_below="@id/rubbishbin_list_content_text" >
     </ListView>
     
     <ImageView
