--- a/res/menu/activity_folder_contact_list.xml
+++ b/res/menu/activity_folder_contact_list.xml
@@ -1,9 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
 
+    <item
+	    android:id="@+id/action_select"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/action_select_all"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
+	<item
+	    android:id="@+id/action_unselect"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/action_unselect_all"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
 	<item
 	    android:id="@+id/action_folder_contacts_list_share_folder"
-	    android:orderInCategory="110"
+	    android:orderInCategory="115"
 	    android:showAsAction="never"
 		android:title="@string/context_share_folder"
 	    android:icon="@drawable/ic_action_bar_null"
