--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -74,7 +74,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cloud_saved_offline"
 		android:background="@null" 
-        android:layout_centerVertical="true"
+        android:layout_alignTop="@id/file_list_three_dots"
+        android:paddingTop="12dp"
         android:paddingRight="15dp" 
         android:layout_toLeftOf="@id/file_list_three_dots"/> 
         
@@ -108,8 +109,243 @@
 		android:layout_alignBottom="@id/file_list_thumbnail"
         android:layout_alignParentRight="true"
         android:paddingRight="15dp" />-->
+        
+        <LinearLayout 
+            android:id="@+id/file_list_options"
+            android:layout_width="match_parent"
+        	android:layout_height="60dp"
+        	android:layout_below="@id/file_list_thumbnail"
+        	android:padding="0dp"
+        	android:background="#333333"
+        	android:orientation="horizontal">
+        	
+            <RelativeLayout
+                android:id="@+id/file_list_option_download_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+                
+                <ImageView
+		            android:id="@+id/file_list_option_download"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_download"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"
+	             />
+                
+                <TextView 
+                    android:id="@+id/file_list_option_download_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_download"
+                    android:layout_centerHorizontal="true"
+                    android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+            </RelativeLayout>
+        	
+           
+			<RelativeLayout
+                android:id="@+id/file_list_option_properties_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		        
+		        <ImageView
+		            android:id="@+id/file_list_option_properties"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/info_ic"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"
+	             />
+		        
+		        <TextView 
+                    android:id="@+id/file_list_option_properties_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+	        </RelativeLayout>    
+		    
+			<RelativeLayout
+                android:id="@+id/file_list_option_public_link_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+				
+				<ImageView
+		            android:id="@+id/file_list_option_public_link"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/link_ic"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"
+	             />
+				
+				<TextView 
+                    android:id="@+id/file_list_option_public_link_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_get_link_menu"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		    </RelativeLayout>
+
+			<RelativeLayout
+                android:id="@+id/file_list_option_leave_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		         
+		        <ImageView
+		            android:id="@+id/file_list_option_leave_share"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/leave_share_ic"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+	             />		   	               
+		      </RelativeLayout>  
+		         
+		   <RelativeLayout
+                android:id="@+id/file_list_option_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		          
+		        <ImageView
+		            android:id="@+id/file_list_option_share"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_share"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+	             />
+		     </RelativeLayout>
+		     
+		    <RelativeLayout
+                android:id="@+id/file_list_option_permissions_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		           
+		         <ImageView
+		            android:id="@+id/file_list_option_permissions"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/permissions_ic"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+	             />
+		           
+		         </RelativeLayout>
+		     <RelativeLayout
+                android:id="@+id/file_list_option_clear_share_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		           	
+		         <ImageView
+		            android:id="@+id/file_list_option_clear_share"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_clear_shares"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+	             />
+		           
+		         </RelativeLayout>
+		    <RelativeLayout
+                android:id="@+id/file_list_option_rename_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_rename"
+		            android:layout_width="match_parent"
+		            android:layout_height="match_parent"
+		            android:src="@drawable/ic_rename"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+	             />
+		           
+		         </RelativeLayout>
+		            
+		    <RelativeLayout
+                android:id="@+id/file_list_option_delete_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_delete"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_rubbish_bin"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"
+	             />
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_delete_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/section_rubbish_bin"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		         </RelativeLayout>
+		     <RelativeLayout
+                android:id="@+id/file_list_option_overflow_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		             
+		         <ImageView
+		            android:id="@+id/file_list_option_overflow"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_action_core_overflow"
+		            android:layout_gravity="center_vertical"
+		            style="@style/dialogActionButton"
+		            android:layout_alignParentRight="true"
+		            android:background="@null"
+		            android:paddingRight="15dp"
+	             />
+            
+		         </RelativeLayout>
+        </LinearLayout>
     
-    <RelativeLayout
+<!-- <RelativeLayout
         android:id="@+id/file_list_options"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -122,124 +358,10 @@
             android:layout_height="wrap_content">
             
             <TableRow>
-<!-- 	            <ImageButton
-		            android:id="@+id/file_list_option_open"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_action_collections_collection"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
--->	        
-				<ImageView
-		            android:id="@+id/file_list_option_download"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_download"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-
-		        <ImageView
-		            android:id="@+id/file_list_option_properties"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/info_ic"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-	            
-		        <ImageView
-		            android:id="@+id/file_list_option_public_link"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/link_ic"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />	
-		            
-		         <ImageView
-		            android:id="@+id/file_list_option_leave_share"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/leave_share_ic"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />		   	               
-		        
-		          <ImageView
-		            android:id="@+id/file_list_option_share"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-		          
-		           <ImageView
-		            android:id="@+id/file_list_option_permissions"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/permissions_ic"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-		           
-		           	<ImageView
-		            android:id="@+id/file_list_option_clear_share"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_clear_shares"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-		           
-		            <ImageView
-		            android:id="@+id/file_list_option_rename"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_rename"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-		           
-		            <ImageView
-		            android:id="@+id/file_list_option_delete"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_rubbish_bin"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton" />
-		            
-		             <ImageView 
-		            android:id="@+id/file_list_option_overflow"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_action_core_overflow"
-		            android:layout_gravity="center_vertical" 
-		            style="@style/dialogActionButton"/>
-		        
- 		<!--        
-
-				<ImageView
-		            android:id="@+id/file_list_option_share"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-
-				<ImageView
-		            android:id="@+id/file_list_option_copy"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_menu_copy"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" />
-		        
-		        <ImageView
-		            android:id="@+id/file_list_option_move"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_menu_move"
-		            android:layout_gravity="center_vertical"
-		            style="@style/dialogActionButton" /> -->
-		         
+						         
 	        </TableRow>        
         </TableLayout>
-    </RelativeLayout>    
+    </RelativeLayout> 
+     -->   
 </RelativeLayout>
 
