--- a/res/xml/authenticator.xml
+++ b/res/xml/authenticator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
                        android:accountType="nz.mega.android.auth"
-                       android:icon="@drawable/ic_navigation_drawer"
-                       android:smallIcon="@drawable/ic_navigation_drawer"
+                       android:icon="@drawable/ic_launcher"
+                       android:smallIcon="@drawable/ic_launcher"
                        android:label="@string/app_name"
                        android:accountPreferences="@xml/prefs"/>
