--- a/res/layout/cell_grid_fill.xml
+++ b/res/layout/cell_grid_fill.xml
@@ -26,11 +26,20 @@
 	        android:padding="7dp"/>
         
         <LinearLayout
-            android:id="@+id/cell_menu_long_click"
+            android:id="@+id/cell_menu_long_click_unselected"
             android:layout_width="172dp"
             android:layout_height="157dp"
             android:visibility="gone"
             android:background="@drawable/background_item_grid_menu_layout"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+	    </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/cell_menu_long_click_selected"
+            android:layout_width="172dp"
+            android:layout_height="157dp"
+            android:visibility="gone"
             android:layout_centerHorizontal="true"
             android:orientation="vertical">
             
