--- a/res/layout/fragment_offlinegrid.xml
+++ b/res/layout/fragment_offlinegrid.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OfflineFragment"
-    android:background="@color/grid_background" >
+    android:background="@color/fragment_background" >
 
     <ListView 
         android:id="@+id/offline_grid_view_browser"
