--- a/res/layout/fragment_rubbishbinlist.xml
+++ b/res/layout/fragment_rubbishbinlist.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/fragment_background"
     tools:context=".RubbishBinListFragment" >
 
     <TextView
@@ -9,9 +10,9 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="8dp"
-	    android:textColor="@color/button_text"
-	    android:background="@color/dark_grey_cloud_drive"
-	    android:textSize="16sp"/>
+	    android:textColor="@color/black"
+	    android:background="@color/content_text_folder"
+	    android:textSize="14sp"/>
     
     <ListView
         android:id="@+id/rubbishbin_list_view"
