--- a/res/layout/fragment_sharedwithmegrid.xml
+++ b/res/layout/fragment_sharedwithmegrid.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IncomingSharesFragment"
-    android:background="@color/grid_background" >
+    android:background="@color/fragment_background" >
 
     <ListView 
         android:id="@+id/sharedwithme_grid_view"
