--- a/res/layout/item_contact_list.xml
+++ b/res/layout/item_contact_list.xml
@@ -86,7 +86,7 @@
         android:layout_below="@id/contact_list_content"
         android:orientation="horizontal"
         android:padding="0dp"
-        android:background="#2a2a2a">
+        android:background="@color/adapters_background">
         
        
 	            <ImageButton
