--- a/res/layout/item_shared_folder.xml
+++ b/res/layout/item_shared_folder.xml
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/shared_folder_contact_permissions"
         android:padding="0dp"
-        android:background="#2a2a2a">
+        android:background="@color/adapters_background">
         
         <TableLayout
             android:layout_width="fill_parent"
