--- a/res/layout/item_transfers_list.xml
+++ b/res/layout/item_transfers_list.xml
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/transfers_list_three_dots"
         android:padding="0dp"
-        android:background="#2a2a2a">
+        android:background="@color/adapters_background">
         
         <TableLayout
             android:layout_width="fill_parent"
