--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,9 +16,8 @@
     <color name="navigation_drawer_background_odd">#292929</color>
     <color name="navigation_drawer_background">#222222</color>
     <color name="color_navigation_drawer_selected">#1AFFFFFF</color> 
-    
     <color name="file_list_second_row">#848484</color>
-    <color name="file_list_selected_row">#e5e5e5</color>
+    <color name="file_list_selected_row">#33000000</color>
     <color name="border_file_properties">#cccccc</color>
     <color name="file_properties_available_layout">#eeeeee</color>
     <color name="file_properties_text_available">#666666</color>
@@ -34,13 +33,16 @@
     <color name="contact_properties_info_data">#999999</color>
     <color name="contact_list_second_row">#848484</color>
     <color name="photo_sync_month_layout">#333333</color>
-    <color name="switch_selector_layout">#1a1a1a</color>
+    <color name="switch_selector_layout">#555555</color>
     <color name="color_default_avatar_mega">#d90007</color>
     <color name="color_default_avatar_phone">#777777</color>
+ 	<color name="content_text_folder">#66333333</color>
+ 	<color name="fragment_background">#EEEEEE</color>
+ 	<color name="adapters_background">#333333</color>
+ 	<color name="file_properties_bottom">#1AFFFFFF</color>
+ 	<color name="file_properties_top">#111111</color>
     
- 
-    
-    <color name="dark_grey_cloud_drive">#6d6f70</color>
+ <!--    <color name="dark_grey_cloud_drive">#6d6f70</color>--> 
     
     <color name="green_free_account">#31B404</color>
      
