--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -13,14 +13,32 @@
         android:layout_centerVertical="true"
         android:button="@drawable/btn_check_holo_light" />
     
-    <ImageView
+      <ImageView
+        android:id="@+id/file_list_saved_offline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cloud_saved_offline"
+		android:background="@null" 
+        android:layout_centerVertical="true"/> 
+        
+      <ImageView
+        android:id="@+id/file_list_saved_offline_multiselect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cloud_saved_offline"
+		android:background="@null" 
+		android:layout_marginLeft="-5dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/file_list_checkbox"/> 
+    
+     <ImageView
         android:id="@+id/file_list_thumbnail"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="5dp" 
+        android:layout_marginLeft="7dp"
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/file_list_checkbox" />    
-    
+        android:layout_toRightOf="@id/file_list_saved_offline" />    
+   
     
     <TextView
         android:id="@+id/file_list_filename"
@@ -67,28 +85,7 @@
         android:layout_alignParentRight="true"
 		android:paddingTop="12dp"
         android:paddingRight="15dp" />
-    
-    <ImageView
-        android:id="@+id/file_list_saved_offline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_cloud_saved_offline"
-		android:background="@null" 
-        android:layout_alignTop="@id/file_list_three_dots"
-        android:paddingTop="12dp"
-        android:paddingRight="15dp" 
-        android:layout_toLeftOf="@id/file_list_three_dots"/> 
-        
-    <ImageView
-        android:id="@+id/file_list_saved_offline_multiselect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_cloud_saved_offline"
-		android:background="@null" 
-        android:layout_centerVertical="true"
-        android:paddingRight="15dp" 
-       	android:layout_alignParentRight="true"/> 
-           
+                     
     
      <ProgressBar
 	    android:id="@+id/transfers_list__browser_bar"
