--- a/res/layout/activity_cam_sync_initial.xml
+++ b/res/layout/activity_cam_sync_initial.xml
@@ -2,21 +2,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitialCamSyncActivity" >
+    tools:context=".InitialCamSyncActivity"
+    android:background="@color/fragment_background" >
+    <ScrollView
+        android:id="@+id/cam_sync_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        
+        <LinearLayout 
+            android:id="@+id/cam_sync_linear_total"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     
-    <nz.mega.components.LoopViewPager
-	    android:id="@+id/cam_sync_pager"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentTop="true"
-	    android:layout_centerHorizontal="true" />
-    
+		    <ImageView 
+		        android:id="@+id/cam_sync_image_view"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/camera_upload"/>
+
+		    <RelativeLayout
+		        android:id="@+id/cam_sync_relative_radio"
+		        android:layout_width="fill_parent"
+		    	android:layout_height="wrap_content">
+		        
+			        <RadioGroup 
+				    android:id="@+id/cam_sync_radio_group" 
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content" 
+				    android:layout_gravity="left"
+				    android:layout_marginLeft="40dp"
+				    android:layout_marginTop="5dp"
+				    android:layout_marginBottom="5dp">
+			             
+						<RadioButton 
+						    android:id="@+id/cam_sync_wifi" 
+						    android:layout_width="wrap_content" 
+						    android:layout_height="wrap_content" 
+						    android:text="@string/cam_sync_wifi"
+						    android:checked="true"
+						    style="@style/radio_MEGA"
+						    android:layout_marginBottom="3dp" />
+						
+						<RadioButton 
+						    android:id="@+id/cam_sync_data" 
+						    android:layout_width="wrap_content" 
+						    android:layout_height="wrap_content" 
+						    android:text="@string/cam_sync_data"
+						    style="@style/radio_MEGA" />
+					</RadioGroup>
+					
+			        <LinearLayout 
+			            android:layout_width="match_parent"
+			            android:layout_height="48dp"
+			            android:orientation="vertical"
+			            android:layout_below="@id/cam_sync_radio_group">
+			            
+			        </LinearLayout>
+			        
+		 	</RelativeLayout>
+	     </LinearLayout>
+    </ScrollView>
+		
     <LinearLayout
          android:id="@+id/cam_buttons_layout"
     	 android:layout_width="match_parent"
     	 android:layout_height="wrap_content"
-    	 android:layout_alignParentBottom="true"
     	 android:layout_gravity="center|fill_horizontal"
+    	 android:layout_alignParentBottom="true"
     	 android:orientation="horizontal">
 
         <Button
@@ -37,39 +91,6 @@
             android:textColor="@color/button_text"
             android:text="@string/cam_sync_ok" />
      </LinearLayout>
-    
-    
-    <RelativeLayout
-        android:id="@+id/cam_sync_relative_radio"
-        android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    	android:layout_above="@id/cam_buttons_layout">
-        
-	        <RadioGroup 
-		    android:id="@+id/cam_sync_radio_group" 
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content" 
-		    android:layout_gravity="left"
-		    android:layout_marginLeft="40dp"
-		    android:layout_marginBottom="20dp">
-	             
-			<RadioButton 
-			    android:id="@+id/cam_sync_wifi" 
-			    android:layout_width="wrap_content" 
-			    android:layout_height="wrap_content" 
-			    android:text="@string/cam_sync_wifi"
-			    android:checked="true"
-			    style="@style/radio_MEGA"
-			    android:layout_marginBottom="5dp" />
-			
-			<RadioButton 
-			    android:id="@+id/cam_sync_data" 
-			    android:layout_width="wrap_content" 
-			    android:layout_height="wrap_content" 
-			    android:text="@string/cam_sync_data"
-			    style="@style/radio_MEGA" />
-		</RadioGroup>
-	</RelativeLayout>
 </RelativeLayout>
 
 
